# django-poetry-startproject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml
assets/scss/: screen.scss
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: __init__.py  admin.py  forms.py  models.py
core/migrations/: 0001_initial.py
core/tests/: test_equal.py
project_name/: __init__.py  asgi.py  models.py  settings.py  wsgi.py
templates/: base.html
theme/: apps.py  tailwind.config.js
