[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Oliver Andrich <oliver@andrich.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = { extras = ["argon2"], version = "^5.0" }
django-browser-reload = "^1.12.1"
django-htmx = "^1.17.2"
pytz = "^2024.1"
whitenoise = { extras = ["brotli"], version = "^6.6.0" }
django-tailwind-cli = { extras = ["django-extensions"], version = "^2.10.0" }
gunicorn = "^21.2.0"
environs = { extras = ["django"], version = "^11.0.0" }
heroicons = "^2.6.0"
django-typer = "^1.0.7"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
model-bakery = "^1.17.0"
pre-commit = "^3.6.0"
django-test-plus = "^2.2.3"
pytest = "^8.0.2"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
django-types = "^0.19.1"
types-pytz = "^2024.1.0.20240203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ project_name }}.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.coverage.run]
source = ["."]
branch = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "E",   # pycodestyle
  "F",   # pyflakes
  "FBT", # flake8-boolean-trap
  "N",   # pep8-naming
  "Q",   # flake8-quotes
  "TID", # flake8-tidy-imports
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore complexity
  "C901",
]

unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't touch unused variables
  "F841",
]

# Exclude a variety of commonly ignored directories
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "**pypackages**",
  "_build",
  "build",
  "dist",
  "migrations",
  "node_modules",
  "static",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
known-first-party = ["{{ project_name }}"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["TID252"]
"tests.py" = ["TID252"]
